Update team name and postion

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -283,73 +283,74 @@
         <div class="text-center mb-16">
             <h2 class="text-4xl font-bold mb-6 text-green-400">Meet Team AgroSat</h2>
             <p class="text-xl text-gray-300 max-w-3xl mx-auto">
-                A multidisciplinary team passionate about using space technology to solve global challenges
+                A multidisciplinary team participating in NASA Apps Space Challenge, passionate about using space technology for agriculture and disaster monitoring.
             </p>
         </div>
 
         <div class="grid md:grid-cols-2 lg:grid-cols-5 gap-8">
-            <!-- Team Member 1 -->
+            <!-- Team Leader / Project Manager -->
             <div class="team-member-card text-center">
                 <div class="team-avatar mx-auto mb-4">
-                    <img src="images/Sufian.jpeg" alt="Alex Rodriguez" class="w-24 h-24 rounded-full object-cover mx-auto">
+                    <img src="images/Anika.webp" alt="Anika" class="w-24 h-24 rounded-full object-cover mx-auto">
+                </div>
+                <h3 class="text-xl font-bold">Marzana Akter Anika</h3>
+                <p class="text-blue-400 mb-2">Team Leader / Project Manager</p>
+                <p class="text-sm text-gray-300">
+                    Coordinating the team, managing project workflow, and ensuring smooth participation in NASA Apps Space Challenge.
+                </p>
+            </div>
+
+            <!-- Lead Developer / Full-Stack Developer -->
+            <div class="team-member-card text-center">
+                <div class="team-avatar mx-auto mb-4">
+                    <img src="images/Sufian.jpeg" alt="MD Abu Sufian" class="w-24 h-24 rounded-full object-cover mx-auto">
                 </div>
                 <h3 class="text-xl font-bold">MD Abu Sufian</h3>
                 <p class="text-blue-400 mb-2">Lead Developer</p>
                 <p class="text-sm text-gray-300">
-                    Full-stack developer with expertise in satellite data processing and 3D visualization.
+                    Handling full-stack development and 3D visualization for the project.
                 </p>
             </div>
 
-            <!-- Team Member 2 -->
+            <!-- Data Scientist / ML Engineer -->
             <div class="team-member-card text-center">
                 <div class="team-avatar mx-auto mb-4">
-                    <img src="images/Fahad.webp" alt="Dr. Sarah Chen" class="w-24 h-24 rounded-full object-cover mx-auto">
+                    <img src="images/Fahad.webp" alt="Fahad" class="w-24 h-24 rounded-full object-cover mx-auto">
                 </div>
-                <h3 class="text-xl font-bold">Fahad</h3>
+                <h3 class="text-xl font-bold">MD. Fahad Hasan</h3>
                 <p class="text-blue-400 mb-2">Data Scientist</p>
                 <p class="text-sm text-gray-300">
-                    PhD in Agricultural Engineering, specializing in remote sensing and crop monitoring.
+                    Processing remote sensing data, analyzing agricultural and disaster datasets, and building prediction algorithms.
                 </p>
             </div>
 
-            <!-- Team Member 3 -->
+            <!-- UI/UX Designer / Frontend Designer -->
             <div class="team-member-card text-center">
                 <div class="team-avatar mx-auto mb-4">
-                    <img src="images/Emon.webp" alt="Marcus Johnson" class="w-24 h-24 rounded-full object-cover mx-auto">
+                    <img src="images/Emon.webp" alt="Syed Hasan" class="w-24 h-24 rounded-full object-cover mx-auto">
                 </div>
-                <h3 class="text-xl font-bold">Syed Hasan</h3>
+                <h3 class="text-xl font-bold">Sayed Hasan Emon</h3>
                 <p class="text-blue-400 mb-2">UI/UX Designer</p>
                 <p class="text-sm text-gray-300">
-                    Creative designer focused on making complex data accessible and actionable.
+                    Designing user interfaces, data visualizations, and making satellite data accessible and intuitive.
                 </p>
             </div>
 
-            <!-- Team Member 4 -->
+            <!-- Systems Engineer / Hardware Specialist -->
             <div class="team-member-card text-center">
                 <div class="team-avatar mx-auto mb-4">
-                    <img src="images/Anika.webp" alt="Priya Patel" class="w-24 h-24 rounded-full object-cover mx-auto">
+                    <img src="images/Himel.webp" alt="Himel" class="w-24 h-24 rounded-full object-cover mx-auto">
                 </div>
-                <h3 class="text-xl font-bold">Anika</h3>
-                <p class="text-blue-400 mb-2">Team Leader</p>
+                <h3 class="text-xl font-bold">Himel Paul</h3>
+                <p class="text-blue-400 mb-2">Systems Engineer</p>
                 <p class="text-sm text-gray-300">
-                    Satellite systems expert with experience in LEO constellation management.
-                </p>
-            </div>
-
-            <!-- Team Member 5 -->
-            <div class="team-member-card text-center">
-                <div class="team-avatar mx-auto mb-4">
-                    <img src="images/Himel.webp" alt="John Doe" class="w-24 h-24 rounded-full object-cover mx-auto">
-                </div>
-                <h3 class="text-xl font-bold">Himel</h3>
-                <p class="text-blue-400 mb-2">Project Manager</p>
-                <p class="text-sm text-gray-300">
-                    Experienced project manager coordinating space-tech initiatives and team workflow.
+                    Managing satellite data pipelines, integrating APIs, and supporting system architecture for NASA Apps Space Challenge.
                 </p>
             </div>
         </div>
     </div>
 </section>
+
 
 
     <!-- Contact Section -->
