Update Profile picture

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -315,7 +315,7 @@
             <!-- Data Scientist / ML Engineer -->
             <div class="team-member-card text-center">
                 <div class="team-avatar mx-auto mb-4">
-                    <img src="images/Fahad.webp" alt="Fahad" class="w-24 h-24 rounded-full object-cover mx-auto">
+                    <img src="images/Fahad.jpg" alt="Fahad" class="w-24 h-24 rounded-full object-cover mx-auto">
                 </div>
                 <h3 class="text-xl font-bold">MD. Fahad Hasan</h3>
                 <p class="text-blue-400 mb-2">Data Scientist</p>
