Update GitHub Link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -362,7 +362,7 @@
             </p>
             
             <div class="flex justify-center space-x-6 mb-8">
-                <a href="#" class="social-link">
+                <a href="https://github.com/sufian-008/NasaSpace" class="social-link">
                     <i class="fab fa-github"></i>
                 </a>
                 <a href="#" class="social-link">
