--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,9 +56,12 @@
                 Real-time LEO satellite monitoring for disaster prevention and agricultural optimization in developing regions
             </p>
             <div class="space-y-4 md:space-y-0 md:space-x-4 md:flex md:justify-center">
-                <button onclick="scrollToSection('dashboard')" class="btn-primary">
-                    <i class="fas fa-rocket mr-2"></i>Launch Dashboard
-                </button>
+                <button 
+    onclick="scrollToSection('dashboard')" 
+    class="btn-primary bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center"
+>
+    <i class="fas fa-rocket mr-2"></i>Launch Dashboard
+</button>
                 <button onclick="scrollToSection('about')" class="btn-secondary">
                     Learn More
                 </button>
@@ -423,5 +426,6 @@
     </div>
 
     <script src="script.js"></script>
+    
 </body>
 </html>
